fix: adjust description styling for better layout and alignment

--- a/website/src/css/custom.scss
+++ b/website/src/css/custom.scss
@@ -68,4 +68,10 @@
     justify-content: center;
     gap: 6px;
   }
+
+  .description {
+    * {
+      min-width: max-content
+    }
+  }
 }
